Fix for AdSense

--- a/src/styles/Corredor.scss
+++ b/src/styles/Corredor.scss
@@ -266,6 +266,18 @@ a {
 
 
 /* ==================================================
+ * 全体
+ * ================================================== */
+
+// 画面上部から出てくるスマホ向け AdSense 広告が画面を押し下げるので指定する
+#container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+/* ==================================================
  * 2カラムレイアウト調整
  * ================================================== */
 
@@ -576,7 +588,7 @@ a {
     // 記事タイトル
     .entry-title { // h1
       margin-bottom: 1rem;
-      font-size: 1.7em;
+      font-size: 1.5em;
       line-height: 1.2;
       
       a {
