--- a/src/styles/Corredor.scss
+++ b/src/styles/Corredor.scss
@@ -390,13 +390,6 @@ a {
   color: $colour-grey-darken;
 }
 
-// はてブ数表示
-.bookmark-widget-counter {  // a
-  img {
-    vertical-align: middle;
-  }
-}
-
 // サイドバーなどで使用するモジュール
 .hatena-module {
   // リストをリセットしておく
@@ -435,6 +428,11 @@ a {
     li {
       padding: .8rem 0;
       border-bottom: 1px solid $colour-grey-hatena;
+      
+      // 記事タイトル
+      .urllist-title-link {  // a
+        font-size: 1rem;
+      }
       
       // カテゴリ (Latests・Hot Entries など)
       .urllist-categories {
@@ -653,7 +651,7 @@ a {
     .entry-title { // h1
       margin-bottom: 1rem;
       font-size: 1.5em;
-      line-height: 1.2;
+      line-height: 1.3;
       
       a {
         color: $colour-black;
@@ -687,7 +685,7 @@ a {
   // エントリ メイン
   // --------------------------------------------------
   .entry-content {
-    margin-bottom: 1rem;
+    margin-bottom: 1.25rem;
     border-bottom: 1px solid $colour-grey-hatena;
     padding-bottom: 1rem;
     
@@ -700,7 +698,7 @@ a {
       border-top: 2px solid $colour-heading-blue;
       border-bottom: 1px solid $colour-heading-blue;
       padding: .25em 1rem;
-      font-size: 1.7em;
+      font-size: 1.5em;
       line-height: 1.4;
       background: $colour-heading-skyblue;
     }
@@ -711,7 +709,7 @@ a {
       border-radius: 0 6px 6px 0;
       padding: 0 1rem;
       color: $colour-heading-blue;
-      font-size: 1.5em;
+      font-size: 1.4em;
       background: $colour-heading-skyblue;
     }
     
@@ -720,12 +718,14 @@ a {
       border-bottom: 1px solid $colour-heading-skyblue-darken;
       border-radius: 6px 6px 0 0;
       padding: 0 1rem;
+      font-size: 1.3em;
       background: $colour-heading-skyblue;
     }
     
     h4 {
       border-bottom: 1px dotted $colour-heading-grey;
       padding: .5rem 1rem;
+      font-size: 1.2em;
     }
     
     pre {
@@ -851,11 +851,6 @@ a {
     .hatena-star-container {
       margin-bottom: 1rem;
       line-height: 1;
-      
-      // はてなスタートボタンの位置を揃える
-      .hatena-star-add-button {  // img
-        vertical-align: top !important;
-      }
     }
     
     // コメント欄
@@ -988,11 +983,6 @@ a {
       .social-buttons {  // span
         display: inline-block;
         margin: 1rem 0;
-        
-        // はてなスターのスター
-        .hatena-star-star {  // img
-          vertical-align: middle;
-        }
       }
     }
   }
@@ -1081,9 +1071,9 @@ a {
   // カテゴリ
   // --------------------------------------------------
   .hatena-module-category {
+    // スクロールできるようにする
     .hatena-module-body {
-      // スクロールできるようにする
-      height: calc(calc(2.2rem + 1px) * 10);  // 10件見えるようにしておく
+      height: 21rem;  // 10件程度見えるようにしておく
       overflow-y: scroll;
       -webkit-overflow-scrolling: touch;
       
@@ -1129,7 +1119,7 @@ a {
   @include center();
   
   margin-top: 1rem;
-  margin-bottom: 1rem;
+  margin-bottom: 3rem;
   
   // footer-link : 他サイト・他ブログへのリンク
   #n-fl {  // ul
