--- a/src/styles/Murga.scss
+++ b/src/styles/Murga.scss
@@ -1,10 +1,10 @@
-/*! Corredor : Neo (@Neos21) http://neos21.hatenablog.com/ */
+/*! Murga : Neo (@Neos21) http://neos21.hatenablog.jp/ */
 /*! Responsive: yes */
 
 // Neo's Normalize
 @import '../../node_modules/@neos21/neos-normalize/neos-normalize';
 
-/*! Corredor [Styles] : Neo (@Neos21) http://neos21.hatenablog.com/ */
+/*! Murga [Styles] : Neo (@Neos21) http://neos21.hatenablog.jp/ */
 
 
 /* ==================================================
@@ -31,12 +31,11 @@ $colour-white                 : #ffffff;
 $colour-black                 : #000000;
 $colour-grey-hatena           : #dddddd;  // blog.css で使用されるカラー
 $colour-grey-darken           : #72767a;  // 主に文字色
-$colour-blue                  : #0070ff;
-$colour-pink                  : #ff0088;
-$colour-heading-blue          : #039be5;  // 見出しなどで使用
-$colour-heading-skyblue       : #f4fafc;
-$colour-heading-skyblue-darken: #a9ddfb;
-$colour-heading-grey          : #959799;
+$colour-grey-bg               : #3e3e3e;  // ページ背景色
+$colour-grey-box              : #959799;  // ボックスのボカシなど
+$colour-red                   : #ff0000;  // リンクホバー時の色
+$colour-red-darken            : #cc1100;  // リンク色など
+$colour-red-lighten           : #fcf4f4;  // 見出しの背景色など
 
 
 /* ==================================================
@@ -73,7 +72,7 @@ $colour-heading-grey          : #959799;
 @mixin responsive-width() {
   width: auto;
   margin: 0 auto;
-  padding: 0 .8rem;
+  padding: 0 .5rem;
   
   @media (min-width: $breakpoint-md) {
     width: 85vw;
@@ -112,6 +111,14 @@ $colour-heading-grey          : #959799;
   }
 }
 
+// ボックスを囲む基本スタイル
+@mixin white-box() {
+  border-radius: 4px;
+  padding: 1rem;
+  background: $colour-white;
+  box-shadow: 0 0 .75rem $colour-grey-box;
+}
+
 
 /* ==================================================
  * 要素全般
@@ -124,15 +131,16 @@ html {
 body {
   color: $colour-black;
   font-size: 16px;  // レスポンシブフォントサイズの最小サイズに合わせる
-  background: $colour-white;
+  background: $colour-grey-bg;
 }
 
 a {
-  color: $colour-pink;
+  color: $colour-red-darken;
   text-decoration: none;
   
   &:hover {
-    color: $colour-blue !important;
+    color: $colour-red !important;
+    text-decoration: underline;
   }
 }
 
@@ -191,6 +199,7 @@ a {
     border-radius: 4px;
     padding: .4rem 0;
     text-align: center;
+    text-decoration: none;
     overflow: hidden;
     transition: color .2s, background-color .2s;
     
@@ -272,6 +281,7 @@ a {
     display: block;
     padding: .6rem 0;
     color: $colour-white !important;
+    text-decoration: none;
     line-height: 1;
     transition: background-color .2s;
     
@@ -323,13 +333,13 @@ a {
   #content-inner {
     @media (min-width: $breakpoint-md) {
       display: grid;
-      grid-template-columns: minmax(440px, auto) minmax(250px, 350px);  // #wrapper (#main) … 440px ～ ・ #box2 … 250px ～ 350px
-      grid-column-gap: 1.5rem;
+      grid-template-columns: minmax(350px, auto) 350px;  // #wrapper (#main) … 350px ～ ・ #box2 … 350px
+      grid-column-gap: 1rem;
       
       // IE11 だけ Grid を修正する
       @media all and (-ms-high-contrast: none) {
         display: -ms-grid;
-        -ms-grid-columns: calc(100% - 250px) 250px;  // minmax() が効かないようなので最小幅のままにする
+        -ms-grid-columns: calc(100% - 350px) 350px;  // minmax() が効かないようなので最小幅のままにする
       }
     }
     
@@ -338,12 +348,12 @@ a {
       
       // #content-inner の grid-template-columns と同値を入れておき突っ張り棒にする
       @media (min-width: $breakpoint-md) {
-        min-width: 440px;
+        min-width: 350px;
         
         // IE11 だけ Grid を修正する
         @media all and (-ms-high-contrast: none) {
           -ms-grid-column: 1;
-          margin-right: 1.5rem;  // grid-column-gap の代用
+          margin-right: 1rem;  // grid-column-gap の代用
         }
       }
     }
@@ -354,7 +364,7 @@ a {
       // #content-inner の grid-template-columns と同値を入れておき突っ張り棒にする
       @media (min-width: $breakpoint-md) {
         margin-top: 0;
-        min-width: 250px;
+        min-width: 350px;
         
         // IE11 だけ Grid を修正する
         @media all and (-ms-high-contrast: none) {
@@ -379,31 +389,23 @@ a {
   color: $colour-grey-darken;
 }
 
-// サイドバーなどで使用するモジュール
-.hatena-module {
+// サイドバーなどで使用するモジュール (記事下部の「関連記事」は除く)
+:not(.entry-footer-secondary-modules) .hatena-module {
+  @include white-box();
+  
+  margin-bottom: 3rem;
+  
   // リストをリセットしておく
   li {
     @include reset-list();
   }
   
-  position: relative;
-  margin: 1.25rem 0 3.5rem;
-  border-top: 1px solid $colour-heading-skyblue-darken;
-  padding-top: 1.5rem;
-  
   // タイトル
   .hatena-module-title {
-    display: inline-block;
-    position: absolute;
-    top: -.6em;
-    left: 50%;
-    padding: 0 .8em;
+    margin-bottom: .75rem;
     color: $colour-black;
     font-size: 1.25rem;
-    white-space: nowrap;
     line-height: 1;
-    background: $colour-white;
-    transform: translateX(-50%);
     
     a {
       color: inherit;
@@ -450,55 +452,63 @@ a {
  * ================================================== */
 
 #blog-title {  // header
-  // 背景画像の位置調整用のオフセット
-  $header-margin-top: 15px;
-  $header-height-min: calc( 80px + #{$header-margin-top});
-  $header-height-max: calc(175px + #{$header-margin-top});
+  $header-height-min: 100px;
+  $header-height-max: 200px;
   
   position: relative;
-  overflow: hidden;  // 黒いボカシによる横スクロール発生をなくす
+  overflow: hidden;  // ボカシによる横スクロール発生をなくす
   
   #blog-title-inner {
-    margin-top: -$header-margin-top;  // 背景画像の表示位置をネガティブマージンで調整する
+    position: relative;
+    margin: 0 auto;
+    max-width: 1000px;  // 背景画像の幅
     height: $header-height-min !important;  // $breakpoint-md 未満時の高さ・背景位置にする
-    background: url("http://cdn-ak.f.st-hatena.com/images/fotolife/n/neos21/20160117/20160117154623.jpg") no-repeat center -10px / auto $header-height-max $colour-black !important;
+    background: url("http://cdn-ak.f.st-hatena.com/images/fotolife/n/neos21/20160228/20160228012225.jpg") no-repeat center -170px !important;
     transition: height .2s, background-position .2s;
     
     // $breakpoint-md 以上の高さ設定
     @media (min-width: $breakpoint-md) {
       height: $header-height-max !important;
-      background-position: left 10px !important;  // 背景画像に関する指定はインラインで追加されるので !important が必要
-    }  
+    }
     
-    // 画像右端に黒いボカシを付ける (主に md 以上の時用)
+    // 左側のボカシ
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      display: block;
+      width: 1rem;
+      height: $header-height-max;
+      background: linear-gradient(to right, $colour-grey-bg .25rem, transparent);
+    }
+    
+    // 右側のボカシ
     &::after {
       content: "";
-      z-index: 1;  // 最下層にする
       position: absolute;
-      top: -$header-margin-top;
-      left: 0;
-      width: 900px;  // $header-height-max で縮小表示した時の幅に合わせて設定
+      top: 0;
+      right: 0;
+      display: block;
+      width: 1rem;
       height: $header-height-max;
-      box-shadow: inset -30px 0 30px -15px $colour-black;
+      background: linear-gradient(to left, $colour-grey-bg .25rem, transparent);
     }
   }
   
   #blog-title-content {
-    z-index: 10;  // #blog-title-inner::after が被らないようにフロートさせる
-    position: absolute;
-    top: $header-margin-top;
-    left: 0;
-    width: 100%;
+    height: 100%;
+    text-align: center;
     line-height: 1;
+    background: linear-gradient(to top, $colour-grey-bg .25rem, transparent 1rem);  // 下側のボカシ
   }
   
   #title {  // h1
-    @include responsive-width();
     @include english-font-family();
     
-    padding-top: .7rem;
+    padding-top: 1rem;
     text-transform: uppercase;
-    letter-spacing: .1em;
+    letter-spacing: .15em;
     transition: padding-top .2s;
     
     @media (min-width: $breakpoint-md) {
@@ -507,21 +517,19 @@ a {
     
     a {
       color: $colour-white;
+      text-decoration: none;
       text-shadow: $colour-black  2px  2px 1px,
                    $colour-black -2px  2px 1px,
                    $colour-black  2px -2px 1px,
                    $colour-black -2px -2px 1px !important;
       
       &:hover {
-        color: #fde !important;
+        color: #ffdddd !important;
       }
     }
   }
   
   #blog-description {  // h2
-    @include responsive-width();
-    
-    padding-top: 5px;
     color: $colour-white;
     font-size: 1em;
     text-shadow: $colour-black  2px  2px 1px,
@@ -550,29 +558,6 @@ a {
   margin-bottom: 1rem;
 }
 
-// 独自ハンバーガーメニュー
-#n-hm {
-  z-index: 10;
-  position: absolute;
-  top: 1rem;
-  right: 1rem;
-  font-size: 1.8em;
-  line-height: 1;
-  
-  a {
-    display: inline-block;
-    border: 1px solid $colour-white;
-    border-radius: 4px;
-    padding: 2px 10px 4px 8px;  // i.blogicon-reorder のサイズに合わせる
-    color: $colour-white;
-    background: rgba(255, 255, 255, .15);
-    
-    &:hover {
-      color: $colour-pink !important;
-    }
-  }
-}
-
 
 /* ==================================================
  * パンくずリスト
@@ -582,10 +567,11 @@ a {
   @include responsive-width();
   
   .breadcrumb {
+    @include white-box();
+    
     margin-bottom: 1.5rem;
-    border: 1px solid $colour-grey-hatena;
-    border-radius: 4px;
-    padding: .5rem 1rem;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
   }
 }
 
@@ -597,6 +583,8 @@ a {
  * ================================================== */
 
 .entry {  // article
+  @include white-box();
+  
   margin-bottom: 4rem;
   
   // .entry-inner
@@ -612,40 +600,21 @@ a {
 
 // 記事タイトル : .archive-entry-header と共用
 .entry-title { // h1
-  margin-bottom: 1rem;
+  margin-bottom: .25rem;
   font-size: 1.5em;
   line-height: 1.3;
   
-  .entry-title-link {  // a
-    color: inherit;
-  }
+  // a.entry-title-link
 }
 
 // カテゴリ
 .entry-categories {
-  padding-bottom: .5em;  // .entry-category-link の margin-bottom と合わせて 1em にする
-  overflow: hidden;
+  padding-bottom: .5rem;
   
-  &::after {
-    @include clearfix();
-  }
-  
-  // カテゴリ一項目 : 幅が狭い時は折り返させないようにする
+  // カテゴリ一項目
   .entry-category-link {  // a
-    float: left;
-    display: block;
-    height: 2.4em;
-    margin: 0 .5em .5em 0;
-    padding: 0 .6em;
-    border: 1px solid $colour-grey-hatena;
-    border-radius: 4px;
-    color: $colour-black;
+    color: $colour-grey-darken;
     font-size: .8em;
-    line-height: 2.4em;
-    
-    @media (max-width: $breakpoint-xs) {
-      white-space: nowrap;
-    }
   }
 }
 
@@ -678,44 +647,45 @@ a {
   // --------------------------------------------------
   
   h1 {
-    margin-top: 2.5rem;
-    margin-bottom: 1.5rem;
-    border-top: 2px solid $colour-heading-blue;
-    border-bottom: 1px solid $colour-heading-blue;
-    padding: .25em .5rem;
+    margin: 2.5rem -1rem 1.5rem -1rem;
+    border-top: 2px solid $colour-red-darken;
+    border-bottom: 1px solid $colour-red-darken;
+    padding: .25em 1rem;
     font-size: 1.5em;
     line-height: 1.4;
-    background: $colour-heading-skyblue;
+    background: $colour-red-lighten;
   }
   
   h2 {
-    margin-top: 2rem;
-    border-left: 1rem solid $colour-heading-blue;
+    margin: 2rem -1rem 1rem -1rem;
+    border-left: 1rem solid $colour-red-darken;
     border-radius: 0 6px 6px 0;
     padding: 0 .5rem;
-    color: $colour-heading-blue;
+    color: $colour-red-darken;
     font-size: 1.4em;
-    background: $colour-heading-skyblue;
+    background: $colour-red-lighten;
   }
   
   h3 {
-    margin-top: 1.75rem;
-    border-bottom: 1px solid $colour-heading-skyblue-darken;
+    margin: 1.75rem -1rem 1rem -1rem;
+    border-bottom: 1px solid $colour-red-darken;
     border-radius: 6px 6px 0 0;
-    padding: 0 .5rem;
+    padding: 0 1rem;
     font-size: 1.3em;
-    background: $colour-heading-skyblue;
+    background: $colour-red-lighten;
   }
   
   h4 {
-    border-bottom: 1px dotted $colour-heading-grey;
-    padding: 0 .5rem;
+    margin: 1rem -1rem;
+    border-bottom: 1px solid $colour-grey-box;
+    padding: 0 1rem;
     font-size: 1.2em;
   }
   
   h5, h6 {
+    margin: 1rem -1rem;
     border-bottom: 1px solid $colour-grey-hatena;
-    padding: 0 .5rem;
+    padding: 0 1rem;
   }
   
   pre {
@@ -812,15 +782,6 @@ a {
   
   li {
     margin-left: 1.5em;
-    
-    a {
-      color: $colour-blue;
-      
-      &:hover {
-        color: $colour-pink !important;
-        text-decoration: underline;
-      }
-    }
   }
 }
 
@@ -933,6 +894,8 @@ a {
     
     // 左側 : 新しい記事
     &.pager-prev {
+      @include white-box();
+      
       float: left;
       
       &::before {
@@ -942,6 +905,8 @@ a {
     
     // 右側 : 古い記事
     &.pager-next {
+      @include white-box();
+      
       float: right;
       text-align: right;
       
@@ -1112,35 +1077,12 @@ a {
 // カテゴリ
 // --------------------------------------------------
 .hatena-module-category {
-  // スクロールできるようにする
-  .hatena-module-body {
-    height: 21rem;  // 10件程度見えるようにしておく
-    overflow-y: scroll;
-    -webkit-overflow-scrolling: touch;
-    
-    // iOS 用スクロールバー : スクロールバー全体の幅
-    &::-webkit-scrollbar {
-      width: 10px;
-    }
-    
-    // iOS 用スクロールバー : スクロールバーのスタイル
-    &::-webkit-scrollbar-thumb {
-      border-radius: 10px;
-      background: $colour-grey-hatena;
-    }
-    
-    // 通常
-    @media (min-width: $breakpoint-md) {
-      height: auto;
-      overflow-y: visible;
-    }
-    
-    // リストを縮める
-    .hatena-urllist {  // ul
-      li {
-        padding: .25rem 0;
-        font-size: .9em;
-      }
+  // リストを縮める
+  .hatena-urllist {  // ul
+    li {
+      border-bottom: 0;
+      padding: .25rem 0;
+      font-size: .9em;
     }
   }
 }
