--- a/src/styles/Murga.scss
+++ b/src/styles/Murga.scss
@@ -813,6 +813,7 @@ a {
     .hatena-module-related-entries {
       margin-bottom: 1rem !important;
       padding: 0;
+      box-shadow: unset;
     }
   }
 }
