--- a/src/styles/ElMylar.scss
+++ b/src/styles/ElMylar.scss
@@ -527,7 +527,6 @@ ins.adsbygoogle {
  * ================================================== */
 
 #top-editarea {
-  @include responsive-width();
   @include center();
   
   margin-top: 1rem;
@@ -996,6 +995,51 @@ ins.adsbygoogle {
 
 
 /* ==================================================
+ * 検索結果
+ * 
+ * #main-inner 直下・.search-form と同じにしておく
+ * ================================================== */
+
+ .search-result {
+  // h2.archive-heading
+  
+  .search-result-form {  // form
+    position: relative;
+    border: 1px solid $colour-grey-hatena;
+    padding-right: calc(20px + 1rem);  // .search-result-button 分の余白を右に開けておく
+    border-radius: 4px;
+    
+    .search-result-input {  // input[type="text"]
+      width: 100%;
+      height: auto;  // blog.css の指定を解除しておく
+      padding: .5rem 0 .5rem .5rem;  // .search-result-button と隣接する余白をなくしておく
+      border: 0;
+      background: transparent;
+      outline: 0;
+    }
+    
+    .search-result-button {  // input[type="submit"]
+      position: absolute;
+      top: 0;
+      right: 0;
+      border: 0;
+      width: calc(20px + 1rem);  // アイコン 20px + 左右余白
+      height: 100%;
+      text-indent: -9999px;
+      background: url("http://blog.hatena.ne.jp/images/theme/search.png") no-repeat center center;
+      outline: 0;
+      opacity: .5;
+      cursor: pointer;
+      
+      &:hover {
+       opacity: .85;
+      }
+    }
+  }
+}
+
+
+/* ==================================================
  * サイドバー
  * ================================================== */
 
@@ -1110,7 +1154,6 @@ ins.adsbygoogle {
  * ================================================== */
 
 #bottom-editarea {
-  @include responsive-width();
   @include center();
   
   margin-top: 1rem;
