--- a/src/styles/Corredor.scss
+++ b/src/styles/Corredor.scss
@@ -771,6 +771,7 @@ ins.adsbygoogle {
     background: $nn-grey-bg;
   }
   
+  // 強調
   em,
   em * {
     color: #296;
@@ -778,7 +779,19 @@ ins.adsbygoogle {
   
   strong,
   strong * {
-    color: #f08;
+    color: #f03;
+  }
+  
+  // リンクと強調を両指定している要素には下線を引く
+  a em, a strong,
+  em a, strong a {
+    text-decoration: underline;
+  }
+  
+  // 「em *」「strong *」が勝ってホバー時に色が変化しないので継承させる
+  a:hover em,
+  a:hover strong {
+    color: inherit;
   }
 }
 
