--- a/src/styles/ElMylar.scss
+++ b/src/styles/ElMylar.scss
@@ -482,7 +482,7 @@ ins.adsbygoogle {
     @include responsive-width();
     @include english-font-family();
     
-    padding-top: .7rem;
+    padding-top: 20px;
     letter-spacing: .1em;
     transition: padding-top .2s;
     
