--- a/src/styles/Corredor.scss
+++ b/src/styles/Corredor.scss
@@ -90,20 +90,20 @@ $colour-heading-grey          : #959799;
  * 
  * - calc(XX + ((1vw - YY) * ZZ))
  *   - XX = 最小サイズを Rem で指定する
- *          ex. 通常 1rem (= 16px) で良い
+ *          ex. 1rem = 16px として計算する
  *   - YY = 拡大を始めるビューポート幅 / 100 (px)
  *          ex. 992px から拡大するなら 9.92px
  *   - ZZ = 100 * 可変させるフォントサイズの差 / 可変させるビューポート幅の差
- *          ex. 100 * (18px - 16px) / (1200px - 992px) = 100 * 2px / 208px = 0.96153...
+ *          ex. 100 * (18px - 17px) / (1200px - 992px) = 100 * 1px / 208px = 0.4808...
  * - 参考 : https://websemantics.uk/tools/responsive-font-calculator/
  */
-@mixin responsive-font-size() {
+ @mixin responsive-font-size() {
   // 最小サイズ (基準)
-  font-size: 16px;
+  font-size: 17px;
   
   // 可変
   @media (min-width: $breakpoint-lg) {
-    font-size: calc(1rem + ((1vw - 9.92px) * .96153));
+    font-size: calc(1.0625rem + ((1vw - 9.92px) * .4808));
   }
   
   // 最大サイズ
@@ -124,7 +124,7 @@ html {
 body {
   padding: 0 !important;  // Google AdSense 自動広告の「アンカー広告」がページを押し下げるのを回避する
   color: $colour-black;
-  font-size: 16px;  // レスポンシブフォントサイズの最小サイズに合わせる
+  font-size: 17px;  // レスポンシブフォントサイズの最小サイズに合わせる
   background: $colour-white;
 }
 
@@ -508,7 +508,7 @@ ins.adsbygoogle {
     @include responsive-width();
     @include english-font-family();
     
-    padding-top: 20px;
+    padding-top: 25px;
     text-transform: uppercase;
     letter-spacing: .1em;
     transition: padding-top .2s;
@@ -681,16 +681,22 @@ ins.adsbygoogle {
 // エントリ メイン
 // --------------------------------------------------
 .entry-content {
-  margin-bottom: 1.25rem;
+  margin-bottom: 1.25em;
   border-bottom: 1px solid $colour-grey-hatena;
-  padding-bottom: 1rem;
+  padding-bottom: 1em;
   
   // ブロック要素
   // --------------------------------------------------
   
+  // 下マージンを em にする
+  h1, h2, h3, h4, h5, h6, p, hr, dl, dt, dd, ol, ul, pre, table, blockquote,
+  .hatena-asin-detail,
+  .banner {
+    margin-bottom: 1.25em;
+  }
+  
   h1 {
-    margin-top: 2.5rem;
-    margin-bottom: 1.5rem;
+    margin-top: 2.5em;
     border-top: 2px solid $colour-heading-blue;
     border-bottom: 1px solid $colour-heading-blue;
     padding: .25em .5rem;
@@ -700,7 +706,7 @@ ins.adsbygoogle {
   }
   
   h2 {
-    margin-top: 2rem;
+    margin-top: 2em;
     border-left: 1rem solid $colour-heading-blue;
     border-radius: 0 6px 6px 0;
     padding: 0 .5rem;
@@ -710,7 +716,7 @@ ins.adsbygoogle {
   }
   
   h3 {
-    margin-top: 1.75rem;
+    margin-top: 1.75em;
     border-bottom: 1px solid $colour-heading-skyblue-darken;
     border-radius: 6px 6px 0 0;
     padding: 0 .5rem;
@@ -905,6 +911,12 @@ ins.adsbygoogle {
       }
     }
   }
+}
+
+// 「embed:cite」で貼り付けたサイトのドメイン : 非表示にする
+// --------------------------------------------------
+.hatena-citation {
+  display: none;
 }
 
 // エントリ フッタ
